# Fanqie-novel-Downloader

./: .gitignore  cli.py  config.py  fanqie.json  locales.py  main.py  novel_downloader.py  platform_utils.py  pyproject.toml  requirements.txt  script.js  watermark.py  web_app.py
.github/workflows/: build-release.yml  close-stale-issues.yml
static/css/: modal.css  style.css
static/js/: app.js  i18n.js
templates/: index.html
