[project]
name = "fanqie-novel-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "ebooklib>=0.18,<0.21",
    "fake-useragent>=1.5.0,<3.0.0",
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=5.0.0,<7.0.0",
    "markdown>=3.5.0,<4.0.0",
    "packaging>=23.1,<25.0",
    "pillow>=10.0.0,<11.0.0",
    "pillow-heif>=0.15.0,<1.0.0",
    "pywebview>=5.0.0,<6.0.0",
    "requests>=2.31.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "urllib3>=2.0.0,<3.0.0",
]
